2007-05-15  Albert Chu <chu11@llnl.gov>

	* common/doc/argp-common-privlevel-admin.man,
	common/doc/argp-common-privlevel-user.man: New files.

	* common/doc/Makefile.am: Updated appropriately for new files.

	* common/doc/argp-common-privlevel.man: Removed file.

	* common/src/arg-common.h: Modify mechanism by which common args
	are shared so some tools can have a default privilege of admin.

	* ipmi-sensors/, ipmi-sel/, bmc-info/, bmc-config/, ipmi-raw/,
	ipmi-pef/: Update to use new common macros and includes.  Default
	privilege of ipmi-pef and ipmi-chassis is now admin.

	* various minor doc updates.
	
2007-05-16  A Balamurugan  <bala@zresearch.com>

	* ipmi-pef/src/ipmi-pef.c (checkout_pef_lad): added comments.

2007-05-15  A Balamurugan  <bala@zresearch.com>

	* ipmi-pef/src/ipmi-pef-utils.c (destination_type_to_string,
	string_to_destination_type, alert_acknowledge_to_string,
	string_to_alert_acknowledge, alert_acknowledge_timeout_to_string,
	string_to_alert_acknowledge_timeout, alert_retries_to_string,
	string_to_alert_retries, gateway_selector_to_string,
	string_to_gateway_selector, alert_ip_address_to_string,
	string_to_alert_ip_address, alert_mac_address_to_string,
	string_to_alert_mac_address): new functions.

	* ipmi-pef/src/ipmi-pef-wrapper.c (_record_string_to_lad,
	get_number_of_lan_destinations, get_lan_alert_destination,
	get_lad_list, set_lan_alert_destination): new functions.

	* ipmi-pef/src/ipmi-pef.c (checkout_pef_lad, commit_pef_lad): new
	functions.

	* ipmi-pef/src/ipmi-pef.c (run_cmd_args): added support to lan
	alert destination checkout/commit.

2007-05-15  Tom Zimmerman <tzimmerman@lnxi.com>

	* ipmi-pef/src/ipmi-pef-utils.c: Fix #define typo.

2007-05-15  A Balamurugan  <bala@zresearch.com>

	* ipmi-pef/src/ipmi-pef-utils.h: fixed ENABLE_FILTER_KEY_STRING
	typo.

	* ipmi-pef/src/ipmi-pef-wrapper.c (_record_string_to_apt,
	get_apt_list, set_alert_policy_table): new functions.
