@@ -38,14 +38,13 @@ move webpage?
 ipmi-pef
 --------
 * ipmi-pef renamed to pef-config
-* Community String support.
-* LAN channel probing in LAN alert destination functions in ipmi-pef code
 * .8 manpage and conf.5 manpage
 * make checkout/commit more like bmc-config
 * state_data must be passed around to all functions
 * by default output everything, support --sections or similar options to output less information.
 * doesn't check for out of mem errors
-
+* diff
+* doesn't output error help
 
 general
 -------
